feature/ASE-95: Minor Util refactorings