@@ -1,30 +1,24 @@
 package com.bloxico.ase.testutil;
 
-import com.bloxico.ase.userservice.dto.entity.artwork.ArtistDto;
-import com.bloxico.ase.userservice.dto.entity.artwork.ArtworkDto;
-import com.bloxico.ase.userservice.dto.entity.artwork.ArtworkGroupDto;
-import com.bloxico.ase.userservice.dto.entity.artwork.ArtworkHistoryDto;
-import com.bloxico.ase.userservice.dto.entity.user.profile.ArtOwnerDto;
+import com.bloxico.ase.userservice.dto.entity.artwork.*;
 import com.bloxico.ase.userservice.entity.artwork.Artist;
 import com.bloxico.ase.userservice.entity.artwork.ArtworkGroup;
-import com.bloxico.ase.userservice.entity.artwork.metadata.ArtworkMetadata;
-import com.bloxico.ase.userservice.entity.user.Role;
 import com.bloxico.ase.userservice.repository.artwork.ArtistRepository;
 import com.bloxico.ase.userservice.repository.artwork.ArtworkGroupRepository;
 import com.bloxico.ase.userservice.service.user.impl.UserProfileServiceImpl;
-import com.bloxico.ase.userservice.util.FileCategory;
 import com.bloxico.ase.userservice.web.model.artwork.SaveArtworkRequest;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
-import java.math.BigDecimal;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
+import java.time.Year;
+import java.util.*;
 
-import static com.bloxico.ase.testutil.Util.genMultipartFile;
-import static com.bloxico.ase.testutil.Util.genUUID;
+import static com.bloxico.ase.testutil.Util.*;
+import static com.bloxico.ase.userservice.entity.artwork.ArtworkGroup.Status.WAITING_FOR_EVALUATION;
+import static com.bloxico.ase.userservice.entity.artwork.metadata.ArtworkMetadata.Status.PENDING;
+import static com.bloxico.ase.userservice.entity.artwork.metadata.ArtworkMetadata.Type.*;
 import static com.bloxico.ase.userservice.util.AseMapper.MAPPER;
+import static com.bloxico.ase.userservice.util.FileCategory.*;
 
 @Component
 public class UtilArtwork {
@@ -38,10 +32,6 @@ public class UtilArtwork {
     @Autowired private ArtworkGroupRepository artworkGroupRepository;
     @Autowired private ArtistRepository artistRepository;
 
-    public ArtworkGroupDto savedArtworkGroupDto(ArtworkGroup.Status status) {
-        return MAPPER.toDto(savedArtworkGroup(status));
-    }
-
     public ArtworkGroup savedArtworkGroup(ArtworkGroup.Status status) {
         var creatorId = utilUser.savedAdmin().getId();
         var artworkGroup = new ArtworkGroup();
@@ -50,8 +40,8 @@ public class UtilArtwork {
         return artworkGroupRepository.saveAndFlush(artworkGroup);
     }
 
-    public ArtistDto savedArtistDto() {
-        return MAPPER.toDto(savedArtist());
+    public ArtworkGroupDto savedArtworkGroupDto(ArtworkGroup.Status status) {
+        return MAPPER.toDto(savedArtworkGroup(status));
     }
 
     public Artist savedArtist() {
@@ -62,22 +52,8 @@ public class UtilArtwork {
         return artistRepository.saveAndFlush(artist);
     }
 
-    public ArtOwnerDto savedArtOwnerDto() {
-        var userProfileDto = utilUserProfile.savedUserProfileDto();
-        var principalId = userProfileDto.getUserId();
-        var artOwnerDto = new ArtOwnerDto();
-        artOwnerDto.setUserProfile(userProfileDto);
-        return userProfileService.saveArtOwner(artOwnerDto, principalId);
-    }
-
-    public ArtOwnerDto savedArtOwnerDto(UtilAuth.Registration registration) {
-        var userProfileDto = utilUserProfile.savedUserProfileDto(registration.getId());
-        var principalId = userProfileDto.getUserId();
-        var artOwnerDto = new ArtOwnerDto();
-        artOwnerDto.setUserProfile(userProfileDto);
-        var response = userProfileService.saveArtOwner(artOwnerDto, principalId);
-        utilUser.addRoleToUserWithId(Role.ART_OWNER, registration.getId());
-        return response;
+    public ArtistDto savedArtistDto() {
+        return MAPPER.toDto(savedArtist());
     }
 
     public ArtworkHistoryDto genArtworkHistory() {
@@ -93,96 +69,96 @@ public class UtilArtwork {
     public ArtworkDto genArtworkDto() {
         var artworkDto = new ArtworkDto();
         artworkDto.setTitle(genUUID());
-        artworkDto.setYear(2010);
-        artworkDto.setWeight(new BigDecimal(12));
-        artworkDto.setHeight(new BigDecimal(12));
-        artworkDto.setWidth(new BigDecimal(12));
-        artworkDto.setDepth(new BigDecimal(12));
+        artworkDto.setYear(genPosInt(Year.now().getValue()));
+        artworkDto.setWeight(genPosBigDecimal(20));
+        artworkDto.setHeight(genPosBigDecimal(20));
+        artworkDto.setWidth(genPosBigDecimal(20));
+        artworkDto.setDepth(genPosBigDecimal(20));
         artworkDto.setPhone(genUUID());
-        artworkDto.setGroup(savedArtworkGroupDto(ArtworkGroup.Status.WAITING_FOR_EVALUATION));
-        artworkDto.setOwner(savedArtOwnerDto());
+        artworkDto.setGroup(savedArtworkGroupDto(WAITING_FOR_EVALUATION));
+        artworkDto.setOwner(utilUserProfile.savedArtOwnerDto());
         artworkDto.setLocation(utilLocation.savedLocationDto());
         artworkDto.setArtist(savedArtistDto());
-        artworkDto.addCategories(Collections.singletonList(utilArtworkMetadata.savedArtworkMetadataDto(ArtworkMetadata.Type.CATEGORY, ArtworkMetadata.Status.PENDING)));
-        artworkDto.addMaterials(Collections.singletonList(utilArtworkMetadata.savedArtworkMetadataDto(ArtworkMetadata.Type.MATERIAL, ArtworkMetadata.Status.PENDING)));
-        artworkDto.addMediums(Collections.singletonList(utilArtworkMetadata.savedArtworkMetadataDto(ArtworkMetadata.Type.MEDIUM, ArtworkMetadata.Status.PENDING)));
-        artworkDto.addStyles(Collections.singletonList(utilArtworkMetadata.savedArtworkMetadataDto(ArtworkMetadata.Type.STYLE, ArtworkMetadata.Status.PENDING)));
+        artworkDto.addCategories(List.of(utilArtworkMetadata.savedArtworkMetadataDto(CATEGORY, PENDING)));
+        artworkDto.addMaterials(List.of(utilArtworkMetadata.savedArtworkMetadataDto(MATERIAL, PENDING)));
+        artworkDto.addMediums(List.of(utilArtworkMetadata.savedArtworkMetadataDto(MEDIUM, PENDING)));
+        artworkDto.addStyles(List.of(utilArtworkMetadata.savedArtworkMetadataDto(STYLE, PENDING)));
         artworkDto.setHistory(genArtworkHistory());
-        artworkDto.addDocuments(Collections.singletonList(utilDocument.savedDocumentDto(FileCategory.IMAGE)));
-        artworkDto.addDocuments(Collections.singletonList(utilDocument.savedDocumentDto(FileCategory.PRINCIPAL_IMAGE)));
-        artworkDto.addDocuments(Collections.singletonList(utilDocument.savedDocumentDto(FileCategory.CERTIFICATE)));
+        artworkDto.addDocuments(List.of(utilDocument.savedDocumentDto(IMAGE)));
+        artworkDto.addDocuments(List.of(utilDocument.savedDocumentDto(PRINCIPAL_IMAGE)));
+        artworkDto.addDocuments(List.of(utilDocument.savedDocumentDto(CERTIFICATE)));
         return artworkDto;
     }
 
     public SaveArtworkRequest genSaveArtworkRequest(ArtworkGroup.Status status, boolean artOwner, Long groupId) {
         var locationDto = utilLocation.savedLocationDto();
-        var document = artOwner ? genMultipartFile(FileCategory.CV.getSupportedFileExtensions().stream().findFirst().get()) :
-                genMultipartFile(FileCategory.CERTIFICATE.getSupportedFileExtensions().stream().findFirst().get());
-        var fileCategory = artOwner ? FileCategory.CV : FileCategory.CERTIFICATE;
+        var fileCategory = artOwner ? CV : CERTIFICATE;
         return new SaveArtworkRequest(
-                Arrays.asList(genMultipartFile(FileCategory.IMAGE.getSupportedFileExtensions().stream().findFirst().get())),    // images
-                genMultipartFile(FileCategory.PRINCIPAL_IMAGE.getSupportedFileExtensions().stream().findFirst().get()),         // principalImage
-                genUUID(),                                                                                                      // title
-                new String[]{genUUID(), genUUID()},                                                                             // categories
-                genUUID(),                                                                                                      // artist
-                artOwner,                                                                                                       // iAmArtOwner
-                2010,                                                                                                      // year
-                new String[]{genUUID(), genUUID()},                                                                             // materials
-                new String[]{genUUID(), genUUID()},                                                                             // mediums
-                new String[]{genUUID(), genUUID()},                                                                             // styles
-                document,                                                                                                       // document
-                fileCategory,                                                                                                   // fileCategory
-                new BigDecimal(100),                                                                                        // weight
-                new BigDecimal(100),                                                                                        // height
-                new BigDecimal(100),                                                                                        // width
-                new BigDecimal(100),                                                                                        // depth
-                genUUID(),                                                                                                      // address
-                genUUID(),                                                                                                      // address2
-                genUUID(),                                                                                                      // city
-                locationDto.getCountry().getName(),                                                                             // country
-                locationDto.getCountry().getRegion().getName(),                                                                 // region
-                genUUID(),                                                                                                      // zipCode
-                genUUID(),                                                                                                      // phone
-                genUUID(),                                                                                                      // appraisalHistory
-                genUUID(),                                                                                                      // locationHistory
-                genUUID(),                                                                                                      // runsHistory
-                genUUID(),                                                                                                      // maintenanceHistory
-                genUUID(),                                                                                                      // notes
-                status,                                                                                                         // status
-                groupId                                                                                                         // groupId
+                List.of(genMultipartFile(IMAGE)),               // images
+                genMultipartFile(PRINCIPAL_IMAGE),              // principalImage
+                genUUID(),                                      // title
+                new String[]{genUUID(), genUUID()},             // categories
+                genUUID(),                                      // artist
+                artOwner,                                       // iAmArtOwner
+                genPosInt(Year.now().getValue()),               // year
+                new String[]{genUUID(), genUUID()},             // materials
+                new String[]{genUUID(), genUUID()},             // mediums
+                new String[]{genUUID(), genUUID()},             // styles
+                genMultipartFile(fileCategory),                 // document
+                fileCategory,                                   // fileCategory
+                genPosBigDecimal(100),                          // weight
+                genPosBigDecimal(100),                          // height
+                genPosBigDecimal(100),                          // width
+                genPosBigDecimal(100),                          // depth
+                genUUID(),                                      // address
+                genUUID(),                                      // address2
+                genUUID(),                                      // city
+                locationDto.getCountry().getName(),             // country
+                locationDto.getCountry().getRegion().getName(), // region
+                genUUID(),                                      // zipCode
+                genUUID(),                                      // phone
+                genUUID(),                                      // appraisalHistory
+                genUUID(),                                      // locationHistory
+                genUUID(),                                      // runsHistory
+                genUUID(),                                      // maintenanceHistory
+                genUUID(),                                      // notes
+                status,                                         // status
+                groupId                                         // groupId
         );
     }
 
-    public HashMap<String, String> genSaveArtworkFormParams(ArtworkGroup.Status status, boolean artOwner, Long groupId) {
+    public Map<String, String> genSaveArtworkFormParams(ArtworkGroup.Status status, boolean iAmArtOwner, Long groupId) {
         var locationDto = utilLocation.savedLocationDto();
-        HashMap<String, String> formParams = new HashMap<>();
-        formParams.put("title", genUUID());
-        formParams.put("categories", genUUID());
-        formParams.put("artist", genUUID());
-        formParams.put("iAmArtOwner", Boolean.toString(artOwner));
-        formParams.put("year", Integer.toString(2010));
-        formParams.put("materials", genUUID());
-        formParams.put("mediums", genUUID());
-        formParams.put("styles", genUUID());
-        formParams.put("fileCategory", artOwner ? FileCategory.CV.name() : FileCategory.CERTIFICATE.name());
-        formParams.put("weight", String.valueOf(new BigDecimal(100)));
-        formParams.put("height", String.valueOf(new BigDecimal(100)));
-        formParams.put("width", String.valueOf(new BigDecimal(100)));
-        formParams.put("depth", String.valueOf(new BigDecimal(100)));
-        formParams.put("address", genUUID());
-        formParams.put("address2", genUUID());
-        formParams.put("city", genUUID());
-        formParams.put("country", locationDto.getCountry().getName());
-        formParams.put("region", locationDto.getCountry().getRegion().getName());
-        formParams.put("zipCode", genUUID());
-        formParams.put("phone", genUUID());
-        formParams.put("appraisalHistory", genUUID());
-        formParams.put("locationHistory", genUUID());
-        formParams.put("runsHistory", genUUID());
-        formParams.put("maintenanceHistory", genUUID());
-        formParams.put("notes", genUUID());
-        formParams.put("status", status.name());
-        formParams.put("groupId", groupId != null ? Long.toString(groupId) : null);
-        return formParams;
+        var map = new HashMap<String, String>();
+        map.put("title", genUUID());
+        map.put("categories", genUUID());
+        map.put("artist", genUUID());
+        map.put("iAmArtOwner", Boolean.toString(iAmArtOwner));
+        map.put("year", "2010");
+        map.put("materials", genUUID());
+        map.put("mediums", genUUID());
+        map.put("styles", genUUID());
+        map.put("fileCategory", iAmArtOwner ? CV.name() : CERTIFICATE.name());
+        map.put("weight", genPosBigDecimal(100).toString());
+        map.put("height", genPosBigDecimal(100).toString());
+        map.put("width", genPosBigDecimal(100).toString());
+        map.put("depth", genPosBigDecimal(100).toString());
+        map.put("address", genUUID());
+        map.put("address2", genUUID());
+        map.put("city", genUUID());
+        map.put("country", locationDto.getCountry().getName());
+        map.put("region", locationDto.getCountry().getRegion().getName());
+        map.put("zipCode", genUUID());
+        map.put("phone", genUUID());
+        map.put("appraisalHistory", genUUID());
+        map.put("locationHistory", genUUID());
+        map.put("runsHistory", genUUID());
+        map.put("maintenanceHistory", genUUID());
+        map.put("notes", genUUID());
+        map.put("status", status.name());
+        if (groupId != null)
+            map.put("groupId", Long.toString(groupId));
+        return map;
     }
+
 }
